31. Commit de los mensajes de forma manual
Se establece al autocommit de las propiedades del consumidor a false, realizando el commit manualmente tras procesar el mensaje.